force-app/main/default/objects/TradeMktSurvey__c/TradeMktSurvey__c.object-meta.xml
<CustomObject>
    <label>Pesquisa de Preço</label>
    <nameField>
        <label>Nome de Pesquisa de Preço</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pesquisas de Preço</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>