force-app/main/default/objects/TradeMktSurvey__c/fields/BrandsTxt__c.field-meta.xml
<CustomField>
    <fullName>BrandsTxt__c</fullName>
    <label>Marcas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brands</valueSetName>
    </valueSet>
</CustomField>