force-app/main/default/objects/TradeMktSurvey__c/fields/LimitDate__c.field-meta.xml
<CustomField>
    <fullName>LimitDate__c</fullName>
    <label>Data Limite</label>
    <type>Date</type>
</CustomField>