force-app/main/default/objects/TradeMktSurvey__c/fields/OtherBrandsTxt__c.field-meta.xml
<CustomField>
    <fullName>OtherBrandsTxt__c</fullName>
    <inlineHelpText>Caso o concorrente não esteja listado nas opções anteriores, insira o nome dos outros concorrentes separados por &quot;;&quot;.</inlineHelpText>
    <label>Outras Marcas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>