force-app/main/default/objects/TradeMktSurvey__c/fields/ValidityFml__c.field-meta.xml
<CustomField>
    <fullName>ValidityFml__c</fullName>
    <formula>CASE(MONTH(LimitDate__c), 
01,&quot;Janeiro&quot;, 
02,&quot;Fevereiro&quot;, 
03,&quot;Março&quot;, 
04,&quot;Abril&quot;, 
05,&quot;Maio&quot;, 
06,&quot;Junho&quot;, 
07,&quot;Julho&quot;, 
08,&quot;Agosto&quot;, 
09,&quot;Setembro&quot;, 
10,&quot;Outubro&quot;, 
11,&quot;Novembro&quot;, 
12,&quot;Dezembro&quot;, 
null 
) + &quot; &quot; + 
TEXT(YEAR(LimitDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vigência</label>
    <type>Text</type>
</CustomField>