force-app/main/default/objects/TradeMktSurvey__c/fields/WarningFml__c.field-meta.xml
<CustomField>
    <fullName>WarningFml__c</fullName>
    <formula>&apos;Após ativar esta pesquisa, você não poderá realizar outras alterações.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aviso</label>
    <type>Text</type>
</CustomField>