force-app/main/default/objects/TradeMktSurvey__c/validationRules/ActiveSurvey.validationRule-meta.xml
<ValidationRule>
    <fullName>ActiveSurvey</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE(IsActiveBln__c) == TRUE</errorConditionFormula>
    <errorMessage>Não é possível editar uma pesquisa de preço ativa.</errorMessage>
</ValidationRule>