force-app/main/default/objects/TradeMktSurvey__c/validationRules/InvalidLimitDate.validationRule-meta.xml
<ValidationRule>
    <fullName>InvalidLimitDate</fullName>
    <active>true</active>
    <errorConditionFormula>LimitDate__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>LimitDate__c</errorDisplayField>
    <errorMessage>Defina uma data limite válida.</errorMessage>
</ValidationRule>