force-app/main/default/objects/TradeMktSurvey__c/validationRules/NoBrandSelected.validationRule-meta.xml
<ValidationRule>
    <fullName>NoBrandSelected</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNULL(BrandsTxt__c) || ISBLANK(BrandsTxt__c)) &amp;&amp; (ISNULL(OtherBrandsTxt__c) || ISBLANK(OtherBrandsTxt__c))</errorConditionFormula>
    <errorMessage>Defina ao menos uma marca de produtos para a pesquisa.</errorMessage>
</ValidationRule>